# specgen

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  logging.rs  main.rs
src/ai/: client.rs  mod.rs  models.rs  streaming.rs
src/api_key/: mod.rs
src/diff/: mod.rs
src/domain/: mod.rs
src/interview/: answers.rs  mod.rs  orchestrator.rs  questions.rs
src/session/: mod.rs
src/spec/: mod.rs  output.rs
src/ui/: mod.rs
