[package]
name = "specgen"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
description = "AI-powered CLI tool that interviews developers and generates comprehensive specifications"
readme = "README.md"
license = "MIT"
authors = ["SpecGen Team"]
repository = "https://github.com/specgen/specgen"

[dependencies]
# CLI & Terminal UI
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
syntect = "5.2"
owo-colors = { version = "4.1", optional = true }

# Async Runtime & HTTP
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
bytes = "1.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Persistence & Session State
tempfile = "3.10"
camino = "1.1"

# Diffing & Merging
similar = "2.5"

# Error Handling
thiserror = "1.0"
miette = { version = "5.0", features = ["fancy"] }

# Secrets handling
secrecy = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = "0.4"

# Terminal detection
atty = "0.2"

# Async traits
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
pretty_assertions = "1.4"
proptest = "1.4"
insta = { version = "1.39", features = ["yaml"] }
tempfile = "3.10"

[build-dependencies]

[features]
default = []
colored = ["owo-colors"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
debug = true
